Bug 404799 - Under wayland with two screen the information panel context menu is not at the right position
Summary: Under wayland with two screen the information panel context menu is not at th...
Status: RESOLVED FIXED
Alias: None
Product: dolphin
Classification: Applications
Component: panels: information (other bugs)
Version First Reported In: 18.04.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Dolphin Bug Assignee
URL:
Keywords: multiscreen, wayland-only
Depends on:
Blocks:
 
Reported: 2019-02-25 10:04 UTC by Méven Car
Modified: 2019-03-12 15:28 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 19.04.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Méven Car 2019-02-25 10:04:27 UTC
SUMMARY
Under wayland with two screens, on the secondary screen the context menu for the information panel is not positioned correctly.

STEPS TO REPRODUCE
1. Have two screens, on the left one, open a dolphin window with the information panel
2. Right on the information panel

OBSERVED RESULT

The context menu is opened to the top left pixel of the dolphin window.

EXPECTED RESULT

The context menu is opened at the mouse position.


SOFTWARE/OS VERSIONS
Windows: 
MacOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 5.15.1
KDE Frameworks Version: 5.54.0
Qt Version: 5.11.1

ADDITIONAL INFORMATION
Comment 1 Méven Car 2019-03-04 11:03:28 UTC
I have tested this behavior under X server and it is not affected.
Comment 2 Méven Car 2019-03-05 17:00:25 UTC
Proposed patch
https://phabricator.kde.org/D19535
Comment 3 Méven Car 2019-03-07 09:04:02 UTC
https://bugs.kde.org/show_bug.cgi?id=384637 makes it difficult to have a screenshot unfortunately.
Comment 4 Nate Graham 2019-03-07 14:32:42 UTC
Yeah, However you should be able to take a full screen screenshot using a timer, and crop it manually afterwards.
Comment 5 Nate Graham 2019-03-12 15:28:20 UTC
Git commit 40896c02d996f69f7bf4e8adebe28acdbff8d350 by Nate Graham, on behalf of Méven Car.
Committed on 12/03/2019 at 15:25.
Pushed by ngraham into branch 'master'.

Correctly position context menu of the information panel under wayland with a secondary screen

Summary:
According to my testing this bug occurs because Qcursor::pos() does not work as expected under wayland on a secondary screen, then it returns inaccurate data.
This could hide bugs elsewhere.
FIXED-IN: 19.04.0

Test Plan:
Under Wayland test the context menu on both screens.
Do the same under Xorg.

Reviewers: #dolphin, elvisangelaccio

Reviewed By: #dolphin, elvisangelaccio

Subscribers: elvisangelaccio, ngraham, nicolasfella, kfm-devel

Tags: #dolphin

Differential Revision: https://phabricator.kde.org/D19535

M  +1    -1    src/panels/information/informationpanel.cpp
M  +2    -2    src/panels/information/informationpanelcontent.cpp
M  +1    -1    src/panels/information/informationpanelcontent.h

https://commits.kde.org/dolphin/40896c02d996f69f7bf4e8adebe28acdbff8d350